fix nav overflow

--- a/docs/css/design-tools-style.css
+++ b/docs/css/design-tools-style.css
@@ -118,7 +118,7 @@ article > header {
 
 .nav ul {
 	position: fixed;
-	width: 248px;
+	width: 260px;
 	height: 80vh;
 	padding-left: 0;
 	margin: 0;
